--- a/inspectionPrice.css
+++ b/inspectionPrice.css
@@ -1,8 +1,17 @@
 .mainContainer {
   font-family: sans-serif;
   max-width: 300px;
-  background-color: #f3f3f3;
+  background-color: rgba(244, 244, 244, 0);
   padding: 35px;
+}
+.inspectionPricingText {
+  background-color: rgba(215, 84, 0, 0.96);
+  padding: 15px;
+  border: 0px solid #FFF;
+  border-radius: 10px;
+  color: white;
+  margin-bottom: 20px;
+
 }
 input[type=text] {
   border: none;
@@ -93,6 +102,7 @@ input[type=text]:focus{
 }
 .inspectionPricingInput {
   max-width: 220px;
+  margin: 10px 20px;
 }
 .orangeBackground {
   background-color: #d75400;
@@ -133,7 +143,7 @@ input[type=text]:focus{
 }
 .bigPrice {
   color: #d75400;
-  line-height: 0;
+  line-height: 0.1em;
   font-size: 55px;
 }
 #measureUnit {
@@ -159,4 +169,70 @@ input[type=text]:focus{
   border-bottom: 1px solid #333;
   transform: rotate(225deg);
   margin-right: 8px;
+}
+#pricingReturn {
+  background-color: white;
+  padding: 15px 30px;
+  border: 0px solid #FFF;
+  border-radius: 10px;
+  box-shadow: -2px 0px 6px rgba(181, 181, 181, 0.31);
+  text-align: center;
+  display: none;
+  /* -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out; */
+}
+.shape-bg {
+  background-color: rgba(215, 84, 0, 0.71);
+  padding: 100px 10px;
+  max-width: 200px;
+  position:relative;
+  bottom: 570px;
+  left: 130px;
+  border: 0px solid #FFF;
+  border-radius: 10px;
+  z-index: -1;
+  /* right: 30px; */
+}
+.shape-bg2{
+  background-color: rgba(215, 84, 0, 0);
+  padding: 100px 10px;
+  max-width: 200px;
+  position:relative;
+  bottom: 670px;
+  left: 140px;
+  border: 4px dashed rgba(215, 84, 0, 1);;
+  border-radius: 30%;
+  z-index: -2;
+  /* right: 30px; */
+}
+.shape-move{
+  /* bottom: 500px; */
+  left: 125px;
+  -webkit-transition: all 0.7s ease-out;
+    -moz-transition: all 0.7s ease-out;
+    -ms-transition: all 0.7s ease-out;
+    -o-transition: all 0.7s ease-out;
+  /* right: 30px; */
+}
+.shape-move2{
+
+  left: 130px;
+  -webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -ms-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+  /* right: 30px; */
+}
+#upper-corner-icon {
+  position: absolute;
+  padding: 12px 12px 12px 12px;
+  top: 24px;
+  left: 32px;
+  color: white;
+  background-color: #333;
+  font-size: 22px;
+  border: 0px solid;
+  border-radius: 50%;
 }
